<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/volverButton"
        android:textColor="@color/black"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/espalda"
        android:textColor="@color/black"
        android:text="@string/espalda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/biceps"
        android:textColor="@color/black"
        android:text="@string/biceps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/triceps"
        android:textColor="@color/black"
        android:text="@string/triceps"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/hombro"
        android:textColor="@color/black"
        android:text="@string/hombro"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/pectoral"
        android:textColor="@color/black"
        android:text="@string/pectoral"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/pierna"
        android:textColor="@color/black"
        android:text="@string/pierna"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

</LinearLayout>