<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/perfilButton"
        android:textColor="@color/black"
        android:text="@string/mi_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/rutinasButton"
        android:textColor="@color/black"
        android:text="@string/mis_rutinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/ejerciciosButton"
        android:textColor="@color/black"
        android:text="@string/ejercicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/salirButton"
        android:textColor="@color/black"
        android:text="@string/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="22sp" />


</LinearLayout>